PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/Expense_Report_Detail__c.object-meta.xml
<CustomObject>
    <description>지출결의서 상세</description>
    <label>지출결의서 상세</label>
    <nameField>
        <displayFormat>ERD-{000000}</displayFormat>
        <label>지출결의서 상세 ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>