PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/Approval_True__c.field-meta.xml
<CustomField>
    <fullName>Approval_True__c</fullName>
    <formula>ISPICKVAL(Expense_Report__r.ApprovalStatus__c, &apos;Approved&apos;) = True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>승인여부</label>
    <type>Checkbox</type>
</CustomField>