PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <label>비용구분</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>용역매입</fullName>
            </value>
            <value>
                <fullName>보험료</fullName>
            </value>
            <value>
                <fullName>세금과공과</fullName>
            </value>
            <value>
                <fullName>임차료</fullName>
            </value>
            <value>
                <fullName>급여</fullName>
            </value>
            <value>
                <fullName>직원경비</fullName>
            </value>
            <value>
                <fullName>지급수수료</fullName>
            </value>
            <value>
                <fullName>복리후생비</fullName>
            </value>
            <value>
                <fullName>소모품비</fullName>
            </value>
            <value>
                <fullName>법인카드</fullName>
            </value>
            <value>
                <fullName>이자비용</fullName>
            </value>
            <value>
                <fullName>차량유지비</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>