PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>