PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <label>지출결의서 ID</label>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>지출결의서 상세</relationshipLabel>
    <relationshipName>ExpenseReportDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>