PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/fm_YearMonth__c.field-meta.xml
<CustomField>
    <fullName>fm_YearMonth__c</fullName>
    <formula>TEXT(Expense_Report__r.UseYear__c)&amp;&apos;. &apos;&amp; right(&apos;0&apos; &amp; Text(Expense_Report__r.UseMonth__c),2)</formula>
    <label>사용년월</label>
    <type>Text</type>
</CustomField>