PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/UseMonth__c.field-meta.xml
<CustomField>
    <fullName>UseMonth__c</fullName>
    <formula>Text(Expense_Report__r.UseMonth__c)</formula>
    <label>지출 사용 월</label>
    <type>Text</type>
</CustomField>