PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/fields/UseYear__c.field-meta.xml
<CustomField>
    <fullName>UseYear__c</fullName>
    <formula>TEXT(Expense_Report__r.UseYear__c)</formula>
    <label>지출 사용 연도</label>
    <type>Text</type>
</CustomField>