PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report_Detail__c/recordTypes/ExpenseReport_Default.recordType-meta.xml
<RecordType>
    <fullName>ExpenseReport_Default</fullName>
    <active>true</active>
    <label>기본</label>
</RecordType>